syntax = "proto3";

package greet;

option java_package = "com.overtureone.proto";
option java_multiple_files = true;

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
    string result = 1;
}

message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string result = 1;
}

message GreetEveryoneRequest {
    Greeting greeting = 1;
}

message GreetEveryoneResponse {
    string result = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number_root = 1;
}

message GreetWithDeadlineResponse {
    string result = 1;
}

message GreetWithDeadlineRequest {
    Greeting greeting = 1;
}


service GreetService {
    //Unary
    rpc Greet(GreetRequest) returns (GreetResponse) {};

    //Server Streaming
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

    //Client Streaming
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};

    //Bidirectional Streaming
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};

    //RPC with Deadline - complete in no less than 300ms
    rpc GreetWithDeadline(GreetWithDeadlineRequest) returns (GreetWithDeadlineResponse) {};
}

service CalculatorService {

    //error handling, throw exception if sent number is negative
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};

}